# openfst-copy

./: .gitignore  Makefile.am  build-wasm.sh  configure.ac
src/lib/: EmscriptenBindings.cc  Makefile.am
